--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.12.0",
     "raf": "^3.4.1",
     "react-transition-group": "^4.0.1",
+    "react-use": "^9.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "throttle-debounce": "^2.1.0"
