--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "astroturf": "^0.9.6",
     "async-validator": "^1.11.2",
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "raf": "^3.4.1",
     "react-transition-group": "^4.0.1",
     "react-use": "^9.8.1",
