--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async-validator": "^1.11.2",
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
+    "postcss-easing-gradients": "^3.0.1",
     "postcss-loader": "^3.0.0",
     "raf": "^3.4.1",
     "react-transition-group": "^4.0.1",
@@ -24,11 +25,12 @@
     "throttle-debounce": "^2.1.0"
   },
   "devDependencies": {
-    "@storybook/react": "^5.0.11",
+    "@babel/core": "^7.4.4",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
-    "@babel/core": "^7.4.4",
-    "babel-loader": "^8.0.6"
+    "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.6",
+    "stylelint-config-recommended": "^2.2.0"
   }
 }
