--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "^2.1.1",
     "node-sass": "^4.12.0",
     "postcss-easing-gradients": "^3.0.1",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "raf": "^3.4.1",
     "react-transition-group": "^4.0.1",
